examples/errors/parsing/spec_list.cn
sort List(a) = { Nil : () | Cons : (a * List(a)) }

fun length : List(Int) -> Int [spec] = {
    Nil () -> 0
  | Cons (x, xs) -> 1 + length xs
}

fun sum : List(Int) -> Int [spec] = {
    Nil () -> 0
  | Cons (x, xs) -> x + sum xs
}

main : () [impure] = ()
